Adding WallPostLayout